--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coding challenge using the Rick and Morty API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "require": "^2.4.20"
   }
